# custom_hooks

./: .pre-commit-hooks.yaml  pyproject.toml
hooks/: audit_setup.py  get_suggestions.py  hello_hook.py  setup_details.py  sonar_checks.py
