[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-hooks"
version = "0.1.0"
description = "Simple Hello Hook"
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
hello-hook = "hooks.hello_hook:main"

[tool.setuptools]
packages = ["hooks"]
