[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "custom-hooks"
version = "0.1.0"
description = "SonarQube pre-commit hook"
requires-python = ">=3.7"
dependencies = ["requests","huggingface_hub"]

[project.scripts]
check-sonar-quality-gate = "hooks.sonar_checks:main"

[tool.setuptools]
packages = ["hooks"]
